kubernetes/doc-home-cluster/apps/selfhosted/big-agi/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: big-agi
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: big-agi
  egress:
    # plex-addons
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: browserless
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
